--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,7 +1,13 @@
 <mat-card>
-  <mat-form-field>
-    <textarea matInput rows="10" [(ngModel)]="postValue"></textarea>
-  </mat-form-field>
-  <button mat-raised-button color="primary" (click)="onCreatePost()">Save Post</button>
+  <form (submit)="onCreatePost(postForm)" #postForm="ngForm">
+    <mat-form-field>
+      <input matInput type="text" name="title" #title="ngModel" placeholder="Post Title" ngModel required>
+      <mat-error *ngIf="title.invalid">Please enter a post title.</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <textarea matInput rows="10" name="content" #content="ngModel" placeholder="Post Content" ngModel required></textarea>
+      <mat-error *ngIf="content.invalid">Please enter a post content.</mat-error>
+    </mat-form-field>
+    <button mat-raised-button color="primary" type="submit">Save Post</button>
+  </form>
 </mat-card>
-<p>{{ newPost }}</p>
