--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,11 +1,12 @@
 <mat-card>
-  <form (submit)="onCreatePost(postForm)" #postForm="ngForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
     <mat-form-field>
-      <input matInput type="text" name="title" #title="ngModel" placeholder="Post Title" ngModel required>
+      <input matInput type="text" name="title" #title="ngModel" placeholder="Post Title" [ngModel]="post?.title" required>
       <mat-error *ngIf="title.invalid">Please enter a post title.</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <textarea matInput rows="10" name="content" #content="ngModel" placeholder="Post Content" ngModel required></textarea>
+      <textarea matInput rows="10" name="content" #content="ngModel" placeholder="Post Content" [ngModel]="post?.content" required></textarea>
       <mat-error *ngIf="content.invalid">Please enter a post content.</mat-error>
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Save Post</button>
